[gd_scene load_steps=6 format=3 uid="uid://bb22tqjrspa6a"]

[ext_resource type="Script" path="res://GUI/inventory/replace_item.gd" id="1_3fwbg"]
[ext_resource type="Texture2D" uid="uid://c7yrskitx27a" path="res://Assets/sprites/items/items.png" id="1_k5ogn"]
[ext_resource type="Script" path="res://GUI/inventory/inventory_ui.gd" id="2_bqs13"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4i4fg"]
atlas = ExtResource("1_k5ogn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_exb14"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_4i4fg")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="ReplaceItem" type="CanvasLayer"]
script = ExtResource("1_3fwbg")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -139.5
offset_right = 81.5
offset_bottom = -116.5
grow_horizontal = 2
grow_vertical = 2
text = "Remplacer un objet ?"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -26.0
offset_right = 202.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_exb14")

[node name="NewItem" type="GridContainer" parent="HBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("2_bqs13")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_exb14")

[node name="Inventory" type="GridContainer" parent="HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
columns = 10
script = ExtResource("2_bqs13")
